--- a/docs/translations/es-ES/es-ES.json
+++ b/docs/translations/es-ES/es-ES.json
@@ -1,54 +1,4 @@
 {
-  "error": "fallo",
-  "device": "Dispositivo",
-  "menuSetDevices": "Dispositivos",
-  "openChalRespHeader": "Reto-Respuesta",
-  "openChalRespLoading": "Cargando la lista de YubiKeys",
-  "openChalRespSelectYubiKey": "Selecciona la YubiKey que deseas usar",
-  "openChalRespErrorEmpty": "No se han encontrado YubiKeys.",
-  "openChalRespErrorEmptyMac": "¿Es la primera vez que usas esta función en macOS? Debes añadir KeeWeb al apartado de «Monitorización de entrada» en los ajustes de seguridad de macOS.",
-  "detMenuCopyOtp": "Copiar código de un solo uso",
-  "detOtpField": "Código de un solo uso",
-  "detOtpClickToTouch": "Clic para generar",
-  "detOtpGenerating": "Generando ...",
-  "detOtpTouch": "Toca tu {}",
-  "setGenFieldLabelDblClickAutoType": "Autocompleta al hacer doble clic sobre las etiquetas de los campos",
-  "setFileExportRaw": "Exportando tus contraseñas",
-  "setFileDeviceIntro": "Los códigos de un solo uso de este {} se mostrarán en la aplicación.",
-  "setFileExportRawBody": "El archivo exportado contendrá contraseñas sin cifrado de ningún tipo. ¿Seguro que deseas continuar?",
-  "setFileDeviceSettings": "Ajustes",
-  "setFileYubiKey": "YubiKey",
-  "setFileDontUseYubiKey": "No usar YubiKey",
-  "setFileYubiKeyHeader": "YubiKey",
-  "setFileRefreshYubiKeyList": "Recargar la lista",
-  "setFileYubiKeyBody": "Usar una YubiKey como parte de la contraseña maestra es peligroso y podrías perder el acceso a tus contraseñas si algo sale mal. ¿Has realizado una copia de seguridad de tu fichero antes de aplicar este cambio?",
-  "setFileYubiKeyErrorEmptyMac": "Parece que hay otra YubiKey conectada, pero no es visible. Debes añadir KeeWeb al apartado de «Monitorización de entrada» de los ajustes de seguridad de macOS para acceder a las YubiKeys.",
-  "setDevicesTitle": "Dispositivos",
-  "setDevicesEnableUsb": "Habilitar interacción con dispositivos USB",
-  "setDevicesYubiKeyIntro": "Se recomienda leer {} antes de usar una YubiKey.",
-  "setDevicesYubiKeyIntroLink": "este documento",
-  "setDevicesYubiKeyToolsDesc": "Para poder usar la YubiKey en este modo, necesitas instalar una herramienta llamada {}.",
-  "setDevicesYubiKeyToolsDesc2": "{} para obtener más información de esta herramienta.",
-  "setDevicesYubiKeyToolsDescLink": "Haz clic aquí",
-  "setDevicesYubiKeyToolsStatusChecking": "Comprobando si {} está instalado",
-  "setDevicesYubiKeyToolsStatusOk": "{} está instalado",
-  "setDevicesYubiKeyToolsStatusError": "{} no está instalado o no funciona",
-  "setDevicesYubiKeyOtpTitle": "Códigos de un solo uso",
-  "setDevicesYubiKeyOtpDesc": "YubiKey puede usarse para generar códigos de un solo uso para distintos servicios.",
-  "setDevicesYubiKeyOtpShowIcon": "Mostrar icono en la pantalla de inicio",
-  "setDevicesYubiKeyOtpAutoOpen": "Cargar automáticamente los códigos de un solo uso cuando haya archivos abiertos",
-  "setDevicesYubiKeyOtpMatchEntries": "Mostrar códigos de un solo uso coincidentes en las entradas",
-  "setDevicesYubiKeyChalRespTitle": "Reto-Respuesta",
-  "setDevicesYubiKeyChalRespDesc": "También se puede usar una YubiKey en modo reto-respuesta para que un fragmento de la clave privada usada para cifrar los archivos resida en la YubiKey.",
-  "setDevicesYubiKeyChalRespShow": "Mostrar la opción para usar una YubiKey al cargar los archivos",
-  "setDevicesYubiKeyStuckWorkaround": "Vuelve a conectar la YubiKey si parece haberse quedado bloqueada en el proceso de carga",
-  "setDevicesYubiKeyRememberChalResp": "Recordar el reto-respuesta mientras la aplicación esté abierta",
-  "yubiKeyStuckError": "La YubiKey parece estar bloqueada, puedes activar la reparación automática en los ajustes de la aplicación.",
-  "yubiKeyNoKeyHeader": "Se requiere una YubiKey",
-  "yubiKeyNoKeyBody": "Por favor, inserta la YubiKey con el número de serie {}",
-  "yubiKeySlot": "ranura",
-  "yubiKeyTouchRequestedHeader": "Toca tu YubiKey",
-  "yubiKeyTouchRequestedBody": "Por favor, toca tu YubiKey con el número de serie {}",
   "months": [
     "Enero",
     "Febrero",
@@ -121,8 +71,10 @@
   "ctrlKey": "ctrl",
   "shiftKey": "mayús",
   "altKey": "alt",
+  "error": "fallo",
   "cache": "caché",
   "file": "archivo",
+  "device": "Dispositivo",
   "webdav": "WebDAV",
   "dropbox": "Dropbox",
   "gdrive": "Google Drive",
@@ -132,6 +84,7 @@
   "menuTrash": "Papelera",
   "menuSetGeneral": "General",
   "menuSetAbout": "Acerca de",
+  "menuSetDevices": "Dispositivos",
   "menuAlertNoTags": "Sin etiquetas",
   "menuAlertNoTagsBody": "Puedes añadir nuevas etiquetas mientras editas los campos en la sección de Etiquetas.",
   "menuEmptyTrash": "Vaciar papelera",
@@ -281,6 +234,11 @@
   "openListErrorBody": "Se ha producido un fallo al cargar la lista de archivos",
   "openShowAllFiles": "Mostrar todos los archivos",
   "openFileNoCacheError": "Archivo no encontrado en el almacenamiento caché. Esto puede suceder por haber limpiado la caché del navegador. Para abrir el fichero, elimínalo de KeeWeb y añádelo de nuevo.",
+  "openChalRespHeader": "Reto-Respuesta",
+  "openChalRespLoading": "Cargando la lista de YubiKeys",
+  "openChalRespSelectYubiKey": "Selecciona la YubiKey que deseas usar",
+  "openChalRespErrorEmpty": "No se han encontrado YubiKeys.",
+  "openChalRespErrorEmptyMac": "¿Es la primera vez que usas esta función en macOS? Debes añadir KeeWeb al apartado de «Monitorización de entrada» en los ajustes de seguridad de macOS.",
   "detAttDownload": "Presiona mayús-clic sobre el botón para descargarlo o",
   "detAttDelToRemove": "Borrar para eliminar",
   "detAttSave": "Guardar como ...",
@@ -334,6 +292,7 @@
   "detMenuAddField": "Añadir {}",
   "detMenuCopyPassword": "Copiar contraseña",
   "detMenuCopyUser": "Copiar usuario",
+  "detMenuCopyOtp": "Copiar código de un solo uso",
   "detSetupOtp": "Códigos de un solo uso",
   "detClone": "Hacer una copia",
   "detCopyEntryToClipboard": "Copiar todos los campos",
@@ -364,6 +323,10 @@
   "detOtpQrErrorBody": "Perdón, no pudimos leer el código QR, por favor, vuelve a intentarlo o contacta a los autores de la aplicación con detalles sobre el fallo.",
   "detOtpQrWrong": "Código QR erróneo",
   "detOtpQrWrongBody": "Se ha escaneado tu código QR pero no contiene información de códigos de un solo uso.",
+  "detOtpField": "Código de un solo uso",
+  "detOtpClickToTouch": "Clic para generar",
+  "detOtpGenerating": "Generando ...",
+  "detOtpTouch": "Toca tu {}",
   "detLockField": "Bloquea este campo para que su contenido no sea visible ni localizable con una búsqueda. Para mostrar el contenido de este campo tendrás que hacer clic sobre él.",
   "detUnlockField": "Desbloquea este campo para hacer su contenido visible y localizable con una búsqueda.",
   "detRevealField": "Revelar",
@@ -492,6 +455,7 @@
   "setGenTryBetaWarningBody": "Por favor, guarda todos los archivos y vuelve a hacer clic sobre este botón",
   "setGenShowAppLogs": "Mostrar registros de la aplicación",
   "setGenReloadApp": "Recargar la aplicación",
+  "setGenFieldLabelDblClickAutoType": "Autocompleta al hacer doble clic sobre las etiquetas de los campos",
   "setFilePath": "Ruta de archivo",
   "setFileStorage": "Este archivo se ha cargado desde {}.",
   "setFileIntl": "Este archivo está almacenado dentro de la aplicación.",
@@ -561,6 +525,16 @@
   "setFileCloseNoSave": "Cerrar y perder cambios",
   "setFileDontClose": "No cerrar",
   "setFileFormatVersion": "Formato de archivo",
+  "setFileExportRaw": "Exportando tus contraseñas",
+  "setFileExportRawBody": "El archivo exportado contendrá contraseñas sin cifrado de ningún tipo. ¿Seguro que deseas continuar?",
+  "setFileDeviceIntro": "Los códigos de un solo uso de este {} se mostrarán en la aplicación.",
+  "setFileDeviceSettings": "Ajustes",
+  "setFileYubiKey": "YubiKey",
+  "setFileDontUseYubiKey": "No usar YubiKey",
+  "setFileRefreshYubiKeyList": "Recargar la lista",
+  "setFileYubiKeyHeader": "YubiKey",
+  "setFileYubiKeyBody": "Usar una YubiKey como parte de la contraseña maestra es peligroso y podrías perder el acceso a tus contraseñas si algo sale mal. ¿Has realizado una copia de seguridad de tu fichero antes de aplicar este cambio?",
+  "setFileYubiKeyErrorEmptyMac": "Parece que hay otra YubiKey conectada, pero no es visible. Debes añadir KeeWeb al apartado de «Monitorización de entrada» de los ajustes de seguridad de macOS para acceder a las YubiKeys.",
   "setShTitle": "Atajos",
   "setShShowAll": "ver todos los elementos",
   "setShColors": "ver elementos con colores",
@@ -616,6 +590,26 @@
   "setPlTranslateLink": "traducir la aplicación a tu idioma",
   "setPlAutoUpdate": "Actualizar automáticamente",
   "setPlLoadGallery": "Cargar galería de complementos",
+  "setDevicesTitle": "Dispositivos",
+  "setDevicesEnableUsb": "Habilitar interacción con dispositivos USB",
+  "setDevicesYubiKeyIntro": "Se recomienda leer {} antes de usar una YubiKey.",
+  "setDevicesYubiKeyIntroLink": "este documento",
+  "setDevicesYubiKeyToolsDesc": "Para poder usar la YubiKey en este modo, necesitas instalar una herramienta llamada {}.",
+  "setDevicesYubiKeyToolsDesc2": "{} para obtener más información de esta herramienta.",
+  "setDevicesYubiKeyToolsDescLink": "Haz clic aquí",
+  "setDevicesYubiKeyToolsStatusChecking": "Comprobando si {} está instalado",
+  "setDevicesYubiKeyToolsStatusOk": "{} está instalado",
+  "setDevicesYubiKeyToolsStatusError": "{} no está instalado o no funciona",
+  "setDevicesYubiKeyOtpTitle": "Códigos de un solo uso",
+  "setDevicesYubiKeyOtpDesc": "YubiKey puede usarse para generar códigos de un solo uso para distintos servicios.",
+  "setDevicesYubiKeyOtpShowIcon": "Mostrar icono en la pantalla de inicio",
+  "setDevicesYubiKeyOtpAutoOpen": "Cargar automáticamente los códigos de un solo uso cuando haya archivos abiertos",
+  "setDevicesYubiKeyOtpMatchEntries": "Mostrar códigos de un solo uso coincidentes en las entradas",
+  "setDevicesYubiKeyChalRespTitle": "Reto-Respuesta",
+  "setDevicesYubiKeyChalRespDesc": "También se puede usar una YubiKey en modo reto-respuesta para que un fragmento de la clave privada usada para cifrar los archivos resida en la YubiKey.",
+  "setDevicesYubiKeyChalRespShow": "Mostrar la opción para usar una YubiKey al cargar los archivos",
+  "setDevicesYubiKeyStuckWorkaround": "Vuelve a conectar la YubiKey si parece haberse quedado bloqueada en el proceso de carga",
+  "setDevicesYubiKeyRememberChalResp": "Recordar el reto-respuesta mientras la aplicación esté abierta",
   "setAboutTitle": "Acerca de",
   "setAboutBuilt": "Esta aplicación está hecha con estas magníficas utilidades",
   "setAboutLic": "Licencia",
@@ -667,5 +661,13 @@
   "importCsvRun": "Importar",
   "importIgnoreField": "Ignorar",
   "importTo": "Las entradas serán importadas a",
-  "importNewFile": "Nuevo archivo"
+  "importNewFile": "Nuevo archivo",
+  "yubiKeyStuckError": "La YubiKey parece estar bloqueada, puedes activar la reparación automática en los ajustes de la aplicación.",
+  "yubiKeyNoKeyHeader": "Se requiere una YubiKey",
+  "yubiKeyNoKeyBody": "Por favor, inserta la YubiKey con el número de serie {}",
+  "yubiKeySlot": "ranura",
+  "yubiKeyTouchRequestedHeader": "Toca tu YubiKey",
+  "yubiKeyTouchRequestedBody": "Por favor, toca tu YubiKey con el número de serie {}",
+  "yubiKeyDisabledErrorHeader": "USB desactivado",
+  "yubiKeyDisabledErrorBody": "Se requiere una YubiKey para abrir este archivo, por favor, activa los dispositivos USB en las opciones."
 }
