--- a/docs/translations/hu/hu.json
+++ b/docs/translations/hu/hu.json
@@ -1,54 +1,4 @@
 {
-  "error": "hiba",
-  "device": "Eszköz",
-  "menuSetDevices": "Eszközök",
-  "openChalRespHeader": "Kihívás-válasz",
-  "openChalRespLoading": "YubiKey lista betöltése",
-  "openChalRespSelectYubiKey": "Válaszd ki a használni kívánt YubiKey-t",
-  "openChalRespErrorEmpty": "Nem találtam YubiKey-t.",
-  "openChalRespErrorEmptyMac": "Először használja ezt a lehetőséget MacOS-en? A KeeWeb-et hozzá kell adni az Apple menü / rendszerbeállítások / biztonság és adatvédelem lehetőség, adatvédelem fülén, a bemenet figyeléséhez.",
-  "detMenuCopyOtp": "Egyszerhasználatos kód másolása",
-  "detOtpField": "Egyszerhasználatos kód",
-  "detOtpClickToTouch": "Generáláshoz kattintson",
-  "detOtpGenerating": "Generálás...",
-  "detOtpTouch": "Érintse meg a {}-t",
-  "setGenFieldLabelDblClickAutoType": "Automatikus gépelés, mező feliratok dupla-kattintására",
-  "setFileExportRaw": "Jelszavai exportálása",
-  "setFileDeviceIntro": "Az egyszeri kódok erről a(z) {} eszközről, megjelennek majd az alkalmazásban.",
-  "setFileExportRawBody": "Az exportált fájl tartalmazni fogja a jelszavait, és ezek nem lesznek titkosítva. Biztosan folytatni szeretné?",
-  "setFileDeviceSettings": "Beállítások",
-  "setFileYubiKey": "YubiKey",
-  "setFileDontUseYubiKey": "Ne használjon YubiKey-t",
-  "setFileYubiKeyHeader": "YubiKey",
-  "setFileRefreshYubiKeyList": "Lista frissítése",
-  "setFileYubiKeyBody": "Egy YubiKey használata a mesterkulcs részeként veszélyes. Elveszítheti a hozzáférését a jelszavaihoz, ha valami balul üt ki. Készített biztonsági mentést a fájljáról mielőtt megváltoztatná ezt a beállítást?",
-  "setFileYubiKeyErrorEmptyMac": "Úgy tűnik, hogy egy YubiKey van csatlakoztatva, de nem látható. A KeeWeb-et hozzá kell adni az Apple menü / rendszerbeállítások / biztonság és adatvédelem lehetőség, adatvédelem fülén, a bemenet figyeléséhez, hogy hozzáférhessen a YubiKey-ekhez.",
-  "setDevicesTitle": "Eszközök",
-  "setDevicesEnableUsb": "USB eszközökkel való együttműködés engedélyezése",
-  "setDevicesYubiKeyIntro": "Ajánlott elolvasni {} mielőtt használ egy YubiKey-t.",
-  "setDevicesYubiKeyIntroLink": "ezt a dokumentumot",
-  "setDevicesYubiKeyToolsDesc": "Hogy ebben az üzemmódban tudja használni a YubiKey-t, telepítenie kell egy {} nevű eszközt.",
-  "setDevicesYubiKeyToolsDesc2": "{}, hogy többet tudjon meg  erről az eszközről.",
-  "setDevicesYubiKeyToolsDescLink": "Kattintson ide",
-  "setDevicesYubiKeyToolsStatusChecking": "{} telepítésének ellenőrzése",
-  "setDevicesYubiKeyToolsStatusOk": "{} telepítve van",
-  "setDevicesYubiKeyToolsStatusError": "{} nincs telepítve, vagy nem működik",
-  "setDevicesYubiKeyOtpTitle": "Egyszeri kódok",
-  "setDevicesYubiKeyOtpDesc": "A YubiKey, különböző szolgáltatásokhoz, egyszeri kódok generálására használható.",
-  "setDevicesYubiKeyOtpShowIcon": "Mutassa a kezdőképernyőn az ikont",
-  "setDevicesYubiKeyOtpAutoOpen": "Amikor vannak megnyitott fájlok, automatikusan töltse be az egyszeri kódokat",
-  "setDevicesYubiKeyOtpMatchEntries": "Mutassa a bejegyzésekben az egyező egyszeri kódokat",
-  "setDevicesYubiKeyChalRespTitle": "Kihívás-válasz",
-  "setDevicesYubiKeyChalRespDesc": "Az is lehetséges, hogy kihívás-válasz üzemmódban használja a YubiKey-t. Így tehát a privát kulcs egy része van használva arra, hogy YubiKey-hez tartozó fájlokat titkosítson.",
-  "setDevicesYubiKeyChalRespShow": "Fájlok megnyitásakor, mutassa a YubiKey használatának lehetőségét",
-  "setDevicesYubiKeyStuckWorkaround": "Csatlakoztassa újra a YubiKey-t, ha úgy tűnik, hogy megakadt a betöltés során",
-  "setDevicesYubiKeyRememberChalResp": "Emlékezzen a kihívás-válaszra amíg az alkalmazás meg van nyitva",
-  "yubiKeyStuckError": "A YubiKey úgy tűnik, hogy elakadt, az automatikus javítás engedélyezhető az alkalmazás beállításaiban.",
-  "yubiKeyNoKeyHeader": "YubiKey szükséges",
-  "yubiKeyNoKeyBody": "Kérem helyezze be a {} szériaszámú Yubikey-t",
-  "yubiKeySlot": "csatlakozó",
-  "yubiKeyTouchRequestedHeader": "Érintse meg a YubiKey-t",
-  "yubiKeyTouchRequestedBody": "Kérem érintse meg a {} szériaszámú YubiKey-t",
   "months": [
     "Január",
     "Február",
@@ -121,8 +71,10 @@
   "ctrlKey": "ctrl",
   "shiftKey": "shift",
   "altKey": "alt",
+  "error": "hiba",
   "cache": "gyorsítótár",
   "file": "fájl",
+  "device": "Eszköz",
   "webdav": "WebDAV",
   "dropbox": "Dropbox",
   "gdrive": "Google Drive",
@@ -132,6 +84,7 @@
   "menuTrash": "Lomtár",
   "menuSetGeneral": "Általános",
   "menuSetAbout": "Névjegy",
+  "menuSetDevices": "Eszközök",
   "menuAlertNoTags": "Nincs címke",
   "menuAlertNoTagsBody": "Új címkéket a mezők szerkesztésekor adhat hozzá, a címkék részben.",
   "menuEmptyTrash": "Lomtár ürítése",
@@ -281,6 +234,11 @@
   "openListErrorBody": "Hiba történt a fájl lista betöltése során",
   "openShowAllFiles": "Minden fájl megjelenítése",
   "openFileNoCacheError": "A fájl nem található meg a gyorsítótárban. Ez azért fordulhat elő, mert a böngésző gyorsítótára ki lett tisztítva. A fájl megnyitásához, távolítsa el azt a KeeWeb-ből, majd adja hozzá újra.",
+  "openChalRespHeader": "Kihívás-válasz",
+  "openChalRespLoading": "YubiKey lista betöltése",
+  "openChalRespSelectYubiKey": "Válaszd ki a használni kívánt YubiKey-t",
+  "openChalRespErrorEmpty": "Nem találtam YubiKey-t.",
+  "openChalRespErrorEmptyMac": "Először használja ezt a lehetőséget MacOS-en? A KeeWeb-et hozzá kell adni az Apple menü / rendszerbeállítások / biztonság és adatvédelem lehetőség, adatvédelem fülén, a bemenet figyeléséhez.",
   "detAttDownload": "Shift-klikk a csatolmány gombon annak letöltéséhez, vagy",
   "detAttDelToRemove": "Törlés vagy eltávolítás",
   "detAttSave": "Mentés mint...",
@@ -334,6 +292,7 @@
   "detMenuAddField": "Hozzáadás {}",
   "detMenuCopyPassword": "Jelszó másolása",
   "detMenuCopyUser": "Felhasználónév másolása",
+  "detMenuCopyOtp": "Egyszerhasználatos kód másolása",
   "detSetupOtp": "Egyszeri kódok",
   "detClone": "Másolat készítése",
   "detCopyEntryToClipboard": "Minden mező másolása",
@@ -364,6 +323,10 @@
   "detOtpQrErrorBody": "Sajnálom, nem tudtam olvasni a QR-kódot, kérem próbálja újra, vagy a hiba részleteinek megadásával vegye fel a kapcsolatot az alkalmazás szerzőivel.",
   "detOtpQrWrong": "Rossz QR-kód",
   "detOtpQrWrongBody": "A QR-kódja sikeresen be lett olvasva, de nem tartalmaz egyszeri kód adatot.",
+  "detOtpField": "Egyszerhasználatos kód",
+  "detOtpClickToTouch": "Generáláshoz kattintson",
+  "detOtpGenerating": "Generálás...",
+  "detOtpTouch": "Érintse meg a {}-t",
   "detLockField": "Zárolja ezt a mezőt, tehát a tartalma nem kereshető és nem látható. A tartalom megjelenítése kizárólag rákattintással lehetséges.",
   "detUnlockField": "Megszünteti a zárolást, tartalmát azonnal kereshetővé és láthatóvá teszi",
   "detRevealField": "Felfed",
@@ -492,6 +455,7 @@
   "setGenTryBetaWarningBody": "Mentsen minden fájlt, és kattintson erre a gombra ismét",
   "setGenShowAppLogs": "Alkalmazás napló megjelenítése",
   "setGenReloadApp": "Az alkalmazás újratöltése",
+  "setGenFieldLabelDblClickAutoType": "Automatikus gépelés, mező feliratok dupla-kattintására",
   "setFilePath": "Fájl elérési út",
   "setFileStorage": "Ez a fájl betöltve innen: {}",
   "setFileIntl": "A fájl a belső alkalmazástárolóban van tárolva.",
@@ -561,6 +525,16 @@
   "setFileCloseNoSave": "Bezárás és módosítások elvesztése",
   "setFileDontClose": "Ne zárja be",
   "setFileFormatVersion": "Fájlformátum",
+  "setFileExportRaw": "Jelszavai exportálása",
+  "setFileExportRawBody": "Az exportált fájl tartalmazni fogja a jelszavait, és ezek nem lesznek titkosítva. Biztosan folytatni szeretné?",
+  "setFileDeviceIntro": "Az egyszeri kódok erről a(z) {} eszközről, megjelennek majd az alkalmazásban.",
+  "setFileDeviceSettings": "Beállítások",
+  "setFileYubiKey": "YubiKey",
+  "setFileDontUseYubiKey": "Ne használjon YubiKey-t",
+  "setFileRefreshYubiKeyList": "Lista frissítése",
+  "setFileYubiKeyHeader": "YubiKey",
+  "setFileYubiKeyBody": "Egy YubiKey használata a mesterkulcs részeként veszélyes. Elveszítheti a hozzáférését a jelszavaihoz, ha valami balul üt ki. Készített biztonsági mentést a fájljáról mielőtt megváltoztatná ezt a beállítást?",
+  "setFileYubiKeyErrorEmptyMac": "Úgy tűnik, hogy egy YubiKey van csatlakoztatva, de nem látható. A KeeWeb-et hozzá kell adni az Apple menü / rendszerbeállítások / biztonság és adatvédelem lehetőség, adatvédelem fülén, a bemenet figyeléséhez, hogy hozzáférhessen a YubiKey-ekhez.",
   "setShTitle": "Gyorsbillentyűk",
   "setShShowAll": "minden elem megjelenítése",
   "setShColors": "színezett elemek megjelenítése",
@@ -616,6 +590,26 @@
   "setPlTranslateLink": "lefordíthatja az alkalmazást a saját nyelvére",
   "setPlAutoUpdate": "Automatikus frissítés",
   "setPlLoadGallery": "Beépülő válogatás betöltése",
+  "setDevicesTitle": "Eszközök",
+  "setDevicesEnableUsb": "USB eszközökkel való együttműködés engedélyezése",
+  "setDevicesYubiKeyIntro": "Ajánlott elolvasni {} mielőtt használ egy YubiKey-t.",
+  "setDevicesYubiKeyIntroLink": "ezt a dokumentumot",
+  "setDevicesYubiKeyToolsDesc": "Hogy ebben az üzemmódban tudja használni a YubiKey-t, telepítenie kell egy {} nevű eszközt.",
+  "setDevicesYubiKeyToolsDesc2": "{}, hogy többet tudjon meg  erről az eszközről.",
+  "setDevicesYubiKeyToolsDescLink": "Kattintson ide",
+  "setDevicesYubiKeyToolsStatusChecking": "{} telepítésének ellenőrzése",
+  "setDevicesYubiKeyToolsStatusOk": "{} telepítve van",
+  "setDevicesYubiKeyToolsStatusError": "{} nincs telepítve, vagy nem működik",
+  "setDevicesYubiKeyOtpTitle": "Egyszeri kódok",
+  "setDevicesYubiKeyOtpDesc": "A YubiKey, különböző szolgáltatásokhoz, egyszeri kódok generálására használható.",
+  "setDevicesYubiKeyOtpShowIcon": "Mutassa a kezdőképernyőn az ikont",
+  "setDevicesYubiKeyOtpAutoOpen": "Amikor vannak megnyitott fájlok, automatikusan töltse be az egyszeri kódokat",
+  "setDevicesYubiKeyOtpMatchEntries": "Mutassa a bejegyzésekben az egyező egyszeri kódokat",
+  "setDevicesYubiKeyChalRespTitle": "Kihívás-válasz",
+  "setDevicesYubiKeyChalRespDesc": "Az is lehetséges, hogy kihívás-válasz üzemmódban használja a YubiKey-t. Így tehát a privát kulcs egy része van használva arra, hogy YubiKey-hez tartozó fájlokat titkosítson.",
+  "setDevicesYubiKeyChalRespShow": "Fájlok megnyitásakor, mutassa a YubiKey használatának lehetőségét",
+  "setDevicesYubiKeyStuckWorkaround": "Csatlakoztassa újra a YubiKey-t, ha úgy tűnik, hogy megakadt a betöltés során",
+  "setDevicesYubiKeyRememberChalResp": "Emlékezzen a kihívás-válaszra amíg az alkalmazás meg van nyitva",
   "setAboutTitle": "Névjegy",
   "setAboutBuilt": "Ez az alkalmazás ezekkel a fantasztikus eszközökkel készült",
   "setAboutLic": "Licenc",
@@ -667,5 +661,11 @@
   "importCsvRun": "Importálás",
   "importIgnoreField": "Mellőz",
   "importTo": "Bejegyzések importálása ide",
-  "importNewFile": "Új fájl"
+  "importNewFile": "Új fájl",
+  "yubiKeyStuckError": "A YubiKey úgy tűnik, hogy elakadt, az automatikus javítás engedélyezhető az alkalmazás beállításaiban.",
+  "yubiKeyNoKeyHeader": "YubiKey szükséges",
+  "yubiKeyNoKeyBody": "Kérem helyezze be a {} szériaszámú Yubikey-t",
+  "yubiKeySlot": "csatlakozó",
+  "yubiKeyTouchRequestedHeader": "Érintse meg a YubiKey-t",
+  "yubiKeyTouchRequestedBody": "Kérem érintse meg a {} szériaszámú YubiKey-t"
 }
