--- a/docs/translations/nl-NL/nl-NL.json
+++ b/docs/translations/nl-NL/nl-NL.json
@@ -1,54 +1,4 @@
 {
-  "error": "fout",
-  "device": "apparaat",
-  "menuSetDevices": "apparaten",
-  "openChalRespHeader": "Challenge-Response",
-  "openChalRespLoading": "Bezig met verzamelen van de lijst van Yubikeys",
-  "openChalRespSelectYubiKey": "Selecteer de Yubikey die je wilt gebruiken",
-  "openChalRespErrorEmpty": "Geen Yubikeys gevonden.",
-  "openChalRespErrorEmptyMac": "Is dit de eerste keer dat je deze feature gebruikt op macOS? Keyweb moet worden toegevoegd aan de input monitoring sectie van de beveiligingsinstellingen.",
-  "detMenuCopyOtp": "Kopieer de eenmalige code",
-  "detOtpField": "Eenmalige code",
-  "detOtpClickToTouch": "Klik om te genereren",
-  "detOtpGenerating": "Bezig met genereren...",
-  "detOtpTouch": "Raak je {} aan",
-  "setGenFieldLabelDblClickAutoType": "Automatisch invullen bij dubbelklikken van veldlabels",
-  "setFileExportRaw": "Bezig met exporteren van je wachtwoorden",
-  "setFileDeviceIntro": "Eenmalige codes van dit {} zal in de app worden weergegeven.",
-  "setFileExportRawBody": "De geëxporteerde lijst zal je wachtwoorden bevatten. Ze zullen niet versleuteld zijn. Wil je doorgaan?",
-  "setFileDeviceSettings": "Instellingen",
-  "setFileYubiKey": "Yubikey",
-  "setFileDontUseYubiKey": "Geen Yubikey gebruiken",
-  "setFileYubiKeyHeader": "YubiKey",
-  "setFileRefreshYubiKeyList": "Ververs de lijst",
-  "setFileYubiKeyBody": "Een YubiKey als onderdeel van de hoofdsleutel gebruiken is gevaarlijk en je kunt de toegang tot je wachtwoorden verliezen als er iets misgaat. Heb je een back-up van je bestand gemaakt voordat je deze instelling wijzigde?",
-  "setFileYubiKeyErrorEmptyMac": "Het lijkt erop dat er een YubiKey is aangesloten, maar deze is niet zichtbaar. Om toegang te krijgen tot YubiKeys moet KeeWeb worden toegevoegd aan de beveiligingsinstellingen, sectie Input Monitoring.",
-  "setDevicesTitle": "Apparaten",
-  "setDevicesEnableUsb": "Interactie met USB-apparaten mogelijk maken",
-  "setDevicesYubiKeyIntro": "Het is raadzaam om {} te lezen voordat je een YubiKey gebruikt.",
-  "setDevicesYubiKeyIntroLink": "dit document",
-  "setDevicesYubiKeyToolsDesc": "Om YubiKey te kunnen gebruiken, moet je het hulpmiddel {} installeren.",
-  "setDevicesYubiKeyToolsDesc2": "{} voor meer informatie over dit hulpmiddel.",
-  "setDevicesYubiKeyToolsDescLink": "Klik hier",
-  "setDevicesYubiKeyToolsStatusChecking": "Controleren of {} is geïnstalleerd",
-  "setDevicesYubiKeyToolsStatusOk": "{} is geïnstalleerd",
-  "setDevicesYubiKeyToolsStatusError": "{} is geïnstalleerd of niet functioneel",
-  "setDevicesYubiKeyOtpTitle": "Eenmalige codes",
-  "setDevicesYubiKeyOtpDesc": "YubiKey kan worden gebruikt om eenmalige codes voor verschillende diensten te genereren.",
-  "setDevicesYubiKeyOtpShowIcon": "Toon het pictogram op het startscherm",
-  "setDevicesYubiKeyOtpAutoOpen": "Automatisch eenmalige codes laden wanneer er geopende bestanden zijn",
-  "setDevicesYubiKeyOtpMatchEntries": "Toon overeenkomende eenmalige codes in items",
-  "setDevicesYubiKeyChalRespTitle": "Challenge-respons",
-  "setDevicesYubiKeyChalRespDesc": "Het is ook mogelijk om een YubiKey te gebruiken in de challenge-responsmodus, zodat een stuk privésleutel dat wordt gebruikt om bestanden te versleutelen op een YubiKey staat.",
-  "setDevicesYubiKeyChalRespShow": "Toon de optie om een YubiKey te gebruiken bij het openen van bestanden",
-  "setDevicesYubiKeyStuckWorkaround": "Sluit de YubiKey opnieuw aan als deze tijdens het laden lijkt te blokkeren",
-  "setDevicesYubiKeyRememberChalResp": "Onthoud challenge-respons zolang de app open is",
-  "yubiKeyStuckError": "De YubiKey lijkt te blokkeren, automatische reparatie kan worden ingeschakeld in app-instellingen.",
-  "yubiKeyNoKeyHeader": "YubiKey vereist",
-  "yubiKeyNoKeyBody": "Voer je YubiKey in met serienummer {}",
-  "yubiKeySlot": "slot",
-  "yubiKeyTouchRequestedHeader": "Raak je YubiKey aan",
-  "yubiKeyTouchRequestedBody": "Raak je YubiKey aan met serienummer {}",
   "months": [
     "januari",
     "februari",
@@ -121,8 +71,10 @@
   "ctrlKey": "ctrl",
   "shiftKey": "shift",
   "altKey": "alt",
+  "error": "fout",
   "cache": "cache",
   "file": "bestand",
+  "device": "apparaat",
   "webdav": "WebDAV",
   "dropbox": "Dropbox",
   "gdrive": "Google Drive",
@@ -132,6 +84,7 @@
   "menuTrash": "Prullenbak",
   "menuSetGeneral": "Algemeen",
   "menuSetAbout": "Over",
+  "menuSetDevices": "apparaten",
   "menuAlertNoTags": "Geen labels",
   "menuAlertNoTagsBody": "Nieuwe labels kunnen worden toegevoegd tijdens het bewerken van velden in de sectie Labels.",
   "menuEmptyTrash": "Prullenbak leegmaken",
@@ -281,6 +234,11 @@
   "openListErrorBody": "Fout bij het laden van de bestandenlijst",
   "openShowAllFiles": "Alle bestanden weergeven",
   "openFileNoCacheError": "Bestand niet aangetroffen in de cache-opslag. Dit kan gebeuren omdat de browseropslag is gewist. Om het bestand te openen moet je het eerst verwijderen uit KeeWeb en daarna opnieuw toevoegen.",
+  "openChalRespHeader": "Challenge-Response",
+  "openChalRespLoading": "Bezig met verzamelen van de lijst van Yubikeys",
+  "openChalRespSelectYubiKey": "Selecteer de Yubikey die je wilt gebruiken",
+  "openChalRespErrorEmpty": "Geen Yubikeys gevonden.",
+  "openChalRespErrorEmptyMac": "Is dit de eerste keer dat je deze feature gebruikt op macOS? Keyweb moet worden toegevoegd aan de input monitoring sectie van de beveiligingsinstellingen.",
   "detAttDownload": "Shift-klik de bijlage-knop om deze te downloaden of",
   "detAttDelToRemove": "Verwijderen om te wissen",
   "detAttSave": "Opslaan als...",
@@ -334,6 +292,7 @@
   "detMenuAddField": "{} Toevoegen",
   "detMenuCopyPassword": "Wachtwoord kopiëren",
   "detMenuCopyUser": "Kopiëer gebruiker",
+  "detMenuCopyOtp": "Kopieer de eenmalige code",
   "detSetupOtp": "Eenmalige wachtwoorden",
   "detClone": "Dupliceren",
   "detCopyEntryToClipboard": "Kopieer alle velden",
@@ -364,6 +323,10 @@
   "detOtpQrErrorBody": "Sorry, we konden de QR-code niet lezen, probeer het nog eens of neem contact op met de app makers en geef de details van de foutmelding door.",
   "detOtpQrWrong": "Verkeerde QR-code",
   "detOtpQrWrongBody": "De QR-code was succesvol gescand, maar het bevat niet de data van een eenmalig wachtwoord.",
+  "detOtpField": "Eenmalige code",
+  "detOtpClickToTouch": "Klik om te genereren",
+  "detOtpGenerating": "Bezig met genereren...",
+  "detOtpTouch": "Raak je {} aan",
   "detLockField": "Vergrendel dit veld opdat de inhoud niet doorzoekbaar en zichtbaar is. Als je de inhoud wilt weergeven, moet je er expliciet op klikken.",
   "detUnlockField": "Ontgrendel dit veld zodat de inhoud direct doorzoekbaar en zichtbaar wordt.",
   "detRevealField": "Weergeven",
@@ -492,6 +455,7 @@
   "setGenTryBetaWarningBody": "Sla alle bestanden op en klik deze knop nog eens",
   "setGenShowAppLogs": "App-logs weergeven",
   "setGenReloadApp": "App opnieuw laden",
+  "setGenFieldLabelDblClickAutoType": "Automatisch invullen bij dubbelklikken van veldlabels",
   "setFilePath": "Bestandspad",
   "setFileStorage": "Dit bestand is geladen van {}.",
   "setFileIntl": "Dit bestand is opgeslagen in de interne app-storage.",
@@ -561,6 +525,16 @@
   "setFileCloseNoSave": "Sluiten en wijzigingen ongedaan maken",
   "setFileDontClose": "Niet sluiten",
   "setFileFormatVersion": "Bestandsformaat",
+  "setFileExportRaw": "Bezig met exporteren van je wachtwoorden",
+  "setFileExportRawBody": "De geëxporteerde lijst zal je wachtwoorden bevatten. Ze zullen niet versleuteld zijn. Wil je doorgaan?",
+  "setFileDeviceIntro": "Eenmalige codes van dit {} zal in de app worden weergegeven.",
+  "setFileDeviceSettings": "Instellingen",
+  "setFileYubiKey": "Yubikey",
+  "setFileDontUseYubiKey": "Geen Yubikey gebruiken",
+  "setFileRefreshYubiKeyList": "Ververs de lijst",
+  "setFileYubiKeyHeader": "YubiKey",
+  "setFileYubiKeyBody": "Een YubiKey als onderdeel van de hoofdsleutel gebruiken is gevaarlijk en je kunt de toegang tot je wachtwoorden verliezen als er iets misgaat. Heb je een back-up van je bestand gemaakt voordat je deze instelling wijzigde?",
+  "setFileYubiKeyErrorEmptyMac": "Het lijkt erop dat er een YubiKey is aangesloten, maar deze is niet zichtbaar. Om toegang te krijgen tot YubiKeys moet KeeWeb worden toegevoegd aan de beveiligingsinstellingen, sectie Input Monitoring.",
   "setShTitle": "Sneltoetsen",
   "setShShowAll": "Alle items weergeven",
   "setShColors": "Items met kleuren weergeven",
@@ -616,6 +590,26 @@
   "setPlTranslateLink": "vertaal de app naar jouw taal",
   "setPlAutoUpdate": "Automatisch vernieuwen",
   "setPlLoadGallery": "Plug-in lijst laden",
+  "setDevicesTitle": "Apparaten",
+  "setDevicesEnableUsb": "Interactie met USB-apparaten mogelijk maken",
+  "setDevicesYubiKeyIntro": "Het is raadzaam om {} te lezen voordat je een YubiKey gebruikt.",
+  "setDevicesYubiKeyIntroLink": "dit document",
+  "setDevicesYubiKeyToolsDesc": "Om YubiKey te kunnen gebruiken, moet je het hulpmiddel {} installeren.",
+  "setDevicesYubiKeyToolsDesc2": "{} voor meer informatie over dit hulpmiddel.",
+  "setDevicesYubiKeyToolsDescLink": "Klik hier",
+  "setDevicesYubiKeyToolsStatusChecking": "Controleren of {} is geïnstalleerd",
+  "setDevicesYubiKeyToolsStatusOk": "{} is geïnstalleerd",
+  "setDevicesYubiKeyToolsStatusError": "{} is geïnstalleerd of niet functioneel",
+  "setDevicesYubiKeyOtpTitle": "Eenmalige codes",
+  "setDevicesYubiKeyOtpDesc": "YubiKey kan worden gebruikt om eenmalige codes voor verschillende diensten te genereren.",
+  "setDevicesYubiKeyOtpShowIcon": "Toon het pictogram op het startscherm",
+  "setDevicesYubiKeyOtpAutoOpen": "Automatisch eenmalige codes laden wanneer er geopende bestanden zijn",
+  "setDevicesYubiKeyOtpMatchEntries": "Toon overeenkomende eenmalige codes in items",
+  "setDevicesYubiKeyChalRespTitle": "Challenge-respons",
+  "setDevicesYubiKeyChalRespDesc": "Het is ook mogelijk om een YubiKey te gebruiken in de challenge-responsmodus, zodat een stuk privésleutel dat wordt gebruikt om bestanden te versleutelen op een YubiKey staat.",
+  "setDevicesYubiKeyChalRespShow": "Toon de optie om een YubiKey te gebruiken bij het openen van bestanden",
+  "setDevicesYubiKeyStuckWorkaround": "Sluit de YubiKey opnieuw aan als deze tijdens het laden lijkt te blokkeren",
+  "setDevicesYubiKeyRememberChalResp": "Onthoud challenge-respons zolang de app open is",
   "setAboutTitle": "Over",
   "setAboutBuilt": "Deze app is gemaakt met de volgende geweldige tools",
   "setAboutLic": "Licentie",
@@ -667,5 +661,11 @@
   "importCsvRun": "Importeren",
   "importIgnoreField": "Negeren",
   "importTo": "Items worden geïmporteerd naar",
-  "importNewFile": "Nieuw bestand"
+  "importNewFile": "Nieuw bestand",
+  "yubiKeyStuckError": "De YubiKey lijkt te blokkeren, automatische reparatie kan worden ingeschakeld in app-instellingen.",
+  "yubiKeyNoKeyHeader": "YubiKey vereist",
+  "yubiKeyNoKeyBody": "Voer je YubiKey in met serienummer {}",
+  "yubiKeySlot": "slot",
+  "yubiKeyTouchRequestedHeader": "Raak je YubiKey aan",
+  "yubiKeyTouchRequestedBody": "Raak je YubiKey aan met serienummer {}"
 }
