--- a/docs/translations/pl/pl.json
+++ b/docs/translations/pl/pl.json
@@ -1,54 +1,4 @@
 {
-  "error": "błąd",
-  "device": "Urządzenie",
-  "menuSetDevices": "Urządzenia",
-  "openChalRespHeader": "Wyzwanie-odpowiedź",
-  "openChalRespLoading": "Ładowanie listy urządzeń YubiKey",
-  "openChalRespSelectYubiKey": "Wybierz YubiKey, którego chcesz użyć",
-  "openChalRespErrorEmpty": "Nie znaleziono urządzeń YubiKey.",
-  "openChalRespErrorEmptyMac": "Po raz pierwszy korzystasz z tej funkcji w systemie macOS? KeeWeb musi zostać dodany do sekcji Monitorowanie danych wejściowych w ustawieniach bezpieczeństwa.",
-  "detMenuCopyOtp": "Skopiuj kod jednorazowy",
-  "detOtpField": "Kod jednorazowy",
-  "detOtpClickToTouch": "Kliknij, aby wygenerować",
-  "detOtpGenerating": "Generowanie...",
-  "detOtpTouch": "Dotknij {}",
-  "setGenFieldLabelDblClickAutoType": "Autowpisywanie po dwukrotnym kliknięciu etykiet pól",
-  "setFileExportRaw": "Eksportowanie haseł",
-  "setFileDeviceIntro": "Kody jednorazowe z {} będą wyświetlane w aplikacji.",
-  "setFileExportRawBody": "Wyeksportowany plik będzie zawierał twoje hasła, nie będą tam szyfrowane. Czy chcesz kontynuować?",
-  "setFileDeviceSettings": "Ustawienia",
-  "setFileYubiKey": "YubiKey",
-  "setFileDontUseYubiKey": "Nie używaj YubiKey",
-  "setFileYubiKeyHeader": "YubiKey",
-  "setFileRefreshYubiKeyList": "Odśwież listę",
-  "setFileYubiKeyBody": "Używanie YubiKey jako klucza głównego jest niebezpieczne i możesz stracić dostęp do swoich haseł, jeśli coś pójdzie nie tak. Czy wykonałeś kopię zapasową pliku przed zmianą tego ustawienia?",
-  "setFileYubiKeyErrorEmptyMac": "Wygląda na to, że podłączony jest YubiKey, ale nie jest widoczny. Aby uzyskać dostęp do urządzeń YubiKey, należy dodać KeeWeb do sekcji Monitorowanie danych wejściowych w ustawieniach bezpieczeństwa.",
-  "setDevicesTitle": "Urządzenia",
-  "setDevicesEnableUsb": "Włącz interakcję z urządzeniami USB",
-  "setDevicesYubiKeyIntro": "Zaleca się przeczytanie {} przed użyciem YubiKey.",
-  "setDevicesYubiKeyIntroLink": "ten dokument",
-  "setDevicesYubiKeyToolsDesc": "Aby móc korzystać z YubiKey w tym trybie, musisz zainstalować narzędzie o nazwie {}.",
-  "setDevicesYubiKeyToolsDesc2": "{}, aby uzyskać więcej informacji o tym narzędziu.",
-  "setDevicesYubiKeyToolsDescLink": "Kliknij tutaj",
-  "setDevicesYubiKeyToolsStatusChecking": "Sprawdzanie, czy {} jest zainstalowany",
-  "setDevicesYubiKeyToolsStatusOk": "{} jest zainstalowany",
-  "setDevicesYubiKeyToolsStatusError": "{} nie jest zainstalowany lub nie działa",
-  "setDevicesYubiKeyOtpTitle": "Kody jednorazowe",
-  "setDevicesYubiKeyOtpDesc": "YubiKey może służyć do generowania kodów jednorazowych dla różnych usług.",
-  "setDevicesYubiKeyOtpShowIcon": "Pokaż ikonę na ekranie startowym",
-  "setDevicesYubiKeyOtpAutoOpen": "Automatycznie ładuj kody jednorazowe, gdy są otwarte pliki",
-  "setDevicesYubiKeyOtpMatchEntries": "Pokaż pasujące kody jednorazowe we wpisach",
-  "setDevicesYubiKeyChalRespTitle": "Wyzwanie-odpowiedź",
-  "setDevicesYubiKeyChalRespDesc": "Możliwe jest również użycie YubiKey w trybie wyzwanie-odpowiedź, dzięki czemu fragment klucza prywatnego, służącego do szyfrowania plików, znajduje się na YubiKey.",
-  "setDevicesYubiKeyChalRespShow": "Pokaż opcję używania YubiKey podczas otwierania plików",
-  "setDevicesYubiKeyStuckWorkaround": "Podłącz ponownie YubiKey, jeśli wydaje się, że zawiesił się podczas ładowania",
-  "setDevicesYubiKeyRememberChalResp": "Pamiętaj wyzwanie-odpowiedź, gdy aplikacja jest otwarta",
-  "yubiKeyStuckError": "Wygląda na to, że YubiKey zawiesił się, w ustawieniach aplikacji można włączyć automatyczną naprawę.",
-  "yubiKeyNoKeyHeader": "Wymagany YubiKey",
-  "yubiKeyNoKeyBody": "Włóż YubiKey o numerze seryjnym {}",
-  "yubiKeySlot": "gniazdo",
-  "yubiKeyTouchRequestedHeader": "Dotknij YubiKey",
-  "yubiKeyTouchRequestedBody": "Proszę dotknąć YubiKey o numerze seryjnym {}",
   "months": [
     "styczeń",
     "luty",
@@ -121,8 +71,10 @@
   "ctrlKey": "ctrl",
   "shiftKey": "shift",
   "altKey": "alt",
+  "error": "błąd",
   "cache": "Cache",
   "file": "Plik",
+  "device": "Urządzenie",
   "webdav": "WebDAV",
   "dropbox": "Dropbox",
   "gdrive": "Google Drive",
@@ -132,6 +84,7 @@
   "menuTrash": "Kosz",
   "menuSetGeneral": "Ogólne",
   "menuSetAbout": "Informacje",
+  "menuSetDevices": "Urządzenia",
   "menuAlertNoTags": "Brak znaczników",
   "menuAlertNoTagsBody": "Możesz dodać nowe znaczniki podczas edytowania pól w sekcji Znaczniki.",
   "menuEmptyTrash": "Opróżnij kosz",
@@ -281,6 +234,11 @@
   "openListErrorBody": "Wystąpił błąd podczas ładowania listy plików",
   "openShowAllFiles": "Pokaż wszystkie pliki",
   "openFileNoCacheError": "Nie znaleziono pliku w pamięci podręcznej. Może się tak zdarzyć, ponieważ pamięć przeglądarki została wyczyszczona. Aby otworzyć plik, usuń go z KeeWeb i dodaj go ponownie.",
+  "openChalRespHeader": "Wyzwanie-odpowiedź",
+  "openChalRespLoading": "Ładowanie listy urządzeń YubiKey",
+  "openChalRespSelectYubiKey": "Wybierz YubiKey, którego chcesz użyć",
+  "openChalRespErrorEmpty": "Nie znaleziono urządzeń YubiKey.",
+  "openChalRespErrorEmptyMac": "Po raz pierwszy korzystasz z tej funkcji w systemie macOS? KeeWeb musi zostać dodany do sekcji Monitorowanie danych wejściowych w ustawieniach bezpieczeństwa.",
   "detAttDownload": "Shift+kliknięcie przycisku załącznika, aby pobrać, albo",
   "detAttDelToRemove": "Delete, aby usunąć",
   "detAttSave": "Zapisz jako …",
@@ -334,6 +292,7 @@
   "detMenuAddField": "Dodaj {}",
   "detMenuCopyPassword": "Skopiuj hasło",
   "detMenuCopyUser": "Skopiuj użytkownika",
+  "detMenuCopyOtp": "Skopiuj kod jednorazowy",
   "detSetupOtp": "Kody jednorazowe",
   "detClone": "Stwórz kopię",
   "detCopyEntryToClipboard": "Skopiuj wszystkie pola",
@@ -364,6 +323,10 @@
   "detOtpQrErrorBody": "Wybacz, nie możemy odczytać kodu QR. Proszę spróbować ponownie albo skontaktować się z autorami aplikacji wraz z informacjami o błędach.",
   "detOtpQrWrong": "Nieprawidłowy kod QR",
   "detOtpQrWrongBody": "Twój kod QR został pomyślnie zeskanowany, ale nie zawiera danych kodu jednorazowego.",
+  "detOtpField": "Kod jednorazowy",
+  "detOtpClickToTouch": "Kliknij, aby wygenerować",
+  "detOtpGenerating": "Generowanie...",
+  "detOtpTouch": "Dotknij {}",
   "detLockField": "Zablokuj to pole, więc jego zawartość nie będzie widoczna i dostępna do wyszukiwania. Wyświetlanie treści wymaga jawnego kliknięcia.",
   "detUnlockField": "Odblokuj to pole, dzięki czemu jego treść będzie natychmiast widoczna i dostępna do wyszukiwania",
   "detRevealField": "Ujawnij",
@@ -492,6 +455,7 @@
   "setGenTryBetaWarningBody": "Proszę zapisać wszystkie pliki i kliknąć ten przycisk ponownie",
   "setGenShowAppLogs": "Pokaż logi aplikacji",
   "setGenReloadApp": "Załaduj ponownie aplikację",
+  "setGenFieldLabelDblClickAutoType": "Autowpisywanie po dwukrotnym kliknięciu etykiet pól",
   "setFilePath": "Ścieżka pliku",
   "setFileStorage": "Ten plik jest wczytany z {}.",
   "setFileIntl": "Ten plik jest przechowywany w wewnętrznym magazynie aplikacji",
@@ -561,6 +525,16 @@
   "setFileCloseNoSave": "Zamknij i utrać zmiany",
   "setFileDontClose": "Nie zamykaj",
   "setFileFormatVersion": "Format pliku",
+  "setFileExportRaw": "Eksportowanie haseł",
+  "setFileExportRawBody": "Wyeksportowany plik będzie zawierał twoje hasła, nie będą tam szyfrowane. Czy chcesz kontynuować?",
+  "setFileDeviceIntro": "Kody jednorazowe z {} będą wyświetlane w aplikacji.",
+  "setFileDeviceSettings": "Ustawienia",
+  "setFileYubiKey": "YubiKey",
+  "setFileDontUseYubiKey": "Nie używaj YubiKey",
+  "setFileRefreshYubiKeyList": "Odśwież listę",
+  "setFileYubiKeyHeader": "YubiKey",
+  "setFileYubiKeyBody": "Używanie YubiKey jako klucza głównego jest niebezpieczne i możesz stracić dostęp do swoich haseł, jeśli coś pójdzie nie tak. Czy wykonałeś kopię zapasową pliku przed zmianą tego ustawienia?",
+  "setFileYubiKeyErrorEmptyMac": "Wygląda na to, że podłączony jest YubiKey, ale nie jest widoczny. Aby uzyskać dostęp do urządzeń YubiKey, należy dodać KeeWeb do sekcji Monitorowanie danych wejściowych w ustawieniach bezpieczeństwa.",
   "setShTitle": "Skróty",
   "setShShowAll": "Pokaż wszystkie elementy",
   "setShColors": "Pokaż elementy z kolorami",
@@ -616,6 +590,26 @@
   "setPlTranslateLink": "przetłumaczyć tę aplikację na swój język",
   "setPlAutoUpdate": "Aktualizuj automatycznie",
   "setPlLoadGallery": "Wczytaj galerię wtyczek",
+  "setDevicesTitle": "Urządzenia",
+  "setDevicesEnableUsb": "Włącz interakcję z urządzeniami USB",
+  "setDevicesYubiKeyIntro": "Zaleca się przeczytanie {} przed użyciem YubiKey.",
+  "setDevicesYubiKeyIntroLink": "ten dokument",
+  "setDevicesYubiKeyToolsDesc": "Aby móc korzystać z YubiKey w tym trybie, musisz zainstalować narzędzie o nazwie {}.",
+  "setDevicesYubiKeyToolsDesc2": "{}, aby uzyskać więcej informacji o tym narzędziu.",
+  "setDevicesYubiKeyToolsDescLink": "Kliknij tutaj",
+  "setDevicesYubiKeyToolsStatusChecking": "Sprawdzanie, czy {} jest zainstalowany",
+  "setDevicesYubiKeyToolsStatusOk": "{} jest zainstalowany",
+  "setDevicesYubiKeyToolsStatusError": "{} nie jest zainstalowany lub nie działa",
+  "setDevicesYubiKeyOtpTitle": "Kody jednorazowe",
+  "setDevicesYubiKeyOtpDesc": "YubiKey może służyć do generowania kodów jednorazowych dla różnych usług.",
+  "setDevicesYubiKeyOtpShowIcon": "Pokaż ikonę na ekranie startowym",
+  "setDevicesYubiKeyOtpAutoOpen": "Automatycznie ładuj kody jednorazowe, gdy są otwarte pliki",
+  "setDevicesYubiKeyOtpMatchEntries": "Pokaż pasujące kody jednorazowe we wpisach",
+  "setDevicesYubiKeyChalRespTitle": "Wyzwanie-odpowiedź",
+  "setDevicesYubiKeyChalRespDesc": "Możliwe jest również użycie YubiKey w trybie wyzwanie-odpowiedź, dzięki czemu fragment klucza prywatnego, służącego do szyfrowania plików, znajduje się na YubiKey.",
+  "setDevicesYubiKeyChalRespShow": "Pokaż opcję używania YubiKey podczas otwierania plików",
+  "setDevicesYubiKeyStuckWorkaround": "Podłącz ponownie YubiKey, jeśli wydaje się, że zawiesił się podczas ładowania",
+  "setDevicesYubiKeyRememberChalResp": "Pamiętaj wyzwanie-odpowiedź, gdy aplikacja jest otwarta",
   "setAboutTitle": "O",
   "setAboutBuilt": "Ta aplikacja jest zbudowana za pomocą tych wspaniałych narzędzi",
   "setAboutLic": "Licencja",
@@ -667,5 +661,13 @@
   "importCsvRun": "Importuj",
   "importIgnoreField": "Ignoruj",
   "importTo": "Wpisy zostaną zaimportowane do",
-  "importNewFile": "Nowy plik"
+  "importNewFile": "Nowy plik",
+  "yubiKeyStuckError": "Wygląda na to, że YubiKey zawiesił się, w ustawieniach aplikacji można włączyć automatyczną naprawę.",
+  "yubiKeyNoKeyHeader": "Wymagany YubiKey",
+  "yubiKeyNoKeyBody": "Włóż YubiKey o numerze seryjnym {}",
+  "yubiKeySlot": "gniazdo",
+  "yubiKeyTouchRequestedHeader": "Dotknij YubiKey",
+  "yubiKeyTouchRequestedBody": "Proszę dotknąć YubiKey o numerze seryjnym {}",
+  "yubiKeyDisabledErrorHeader": "USB jest wyłączone",
+  "yubiKeyDisabledErrorBody": "YubiKey jest wymagany do otwarcia tego pliku, włącz urządzenia USB w ustawieniach."
 }
