--- a/docs/translations/tr/tr.json
+++ b/docs/translations/tr/tr.json
@@ -1,54 +1,4 @@
 {
-  "error": "hata",
-  "device": "cihaz",
-  "menuSetDevices": "Cihazlar",
-  "openChalRespHeader": "Karşılama Yanıtı",
-  "openChalRespLoading": "YubiKeys listesi yükleniyor",
-  "openChalRespSelectYubiKey": "Kullanmak istediğiniz bir YubiKey seçin",
-  "openChalRespErrorEmpty": "YubiKey bulunamadı.",
-  "openChalRespErrorEmptyMac": "MacOS'ta bu özelliği ilk kez mi kullanıyorsunuz? Güvenlik ayarlarının Giriş İzleme bölümüne KeeWeb eklenmelidir.",
-  "detMenuCopyOtp": "Tek seferlik kodu kopyala",
-  "detOtpField": "Tek seferlik kod",
-  "detOtpClickToTouch": "Üretmek için tıkla",
-  "detOtpGenerating": "Üretiliyor...",
-  "detOtpTouch": "Dokunun {}",
-  "setGenFieldLabelDblClickAutoType": "Alan etiketlerine çift tıklayınca otomatik yaz",
-  "setFileExportRaw": "Parolalar dışa aktarılıyor",
-  "setFileDeviceIntro": "Bu {} adresinden tek seferlik kodlar uygulamada görüntülenecektir.",
-  "setFileExportRawBody": "Dışa aktarılan dosya parolalarınızı içerecek, orada şifrelenmeyecek. Devam etmek ister misiniz?",
-  "setFileDeviceSettings": "Ayarlar",
-  "setFileYubiKey": "YubiKey",
-  "setFileDontUseYubiKey": "YubiKey kullanma",
-  "setFileYubiKeyHeader": "YubiKey",
-  "setFileRefreshYubiKeyList": "Listeyi yenile",
-  "setFileYubiKeyBody": "Ana anahtarın bir parçası olarak YubiKey kullanmak tehlikelidir ve bir şeyler ters giderse parolalarına erişiminizi kaybedebilirsiniz. Bu ayarı değiştirmeden önce dosyanızı yedeklediniz mi?",
-  "setFileYubiKeyErrorEmptyMac": "Takılı bir YubiKey var gibi görünüyor, ancak görünmüyor. YubiKeys'e erişmek için güvenlik ayarlarının Giriş İzleme bölümüne KeeWeb eklenmelidir.",
-  "setDevicesTitle": "Cihazlar",
-  "setDevicesEnableUsb": "USB cihazlarıyla etkileşimi etkinleştir",
-  "setDevicesYubiKeyIntro": "YubiKey kullanmadan önce {} okumanız önerilir.",
-  "setDevicesYubiKeyIntroLink": "bu belge",
-  "setDevicesYubiKeyToolsDesc": "Bu kipte YubiKey kullanabilmek için {} adlı bir araç kurmanız gerekir.",
-  "setDevicesYubiKeyToolsDesc2": "{} bu araç hakkında daha fazla bilgi almak için.",
-  "setDevicesYubiKeyToolsDescLink": "Buraya tıkla",
-  "setDevicesYubiKeyToolsStatusChecking": "{} kurulu olup olmadığını kontrol et",
-  "setDevicesYubiKeyToolsStatusOk": "{} kuruldu",
-  "setDevicesYubiKeyToolsStatusError": "{} kurulu değil veya çalışmıyor",
-  "setDevicesYubiKeyOtpTitle": "Tek seferlik kodlar",
-  "setDevicesYubiKeyOtpDesc": "YubiKey, farklı hizmetler için tek seferlik kodlar oluşturmak için kullanılabilir.",
-  "setDevicesYubiKeyOtpShowIcon": "Başlangıç ​​ekranında simgeyi göster",
-  "setDevicesYubiKeyOtpAutoOpen": "Açık dosyalar olduğunda tek seferlik kodları otomatik olarak yükle",
-  "setDevicesYubiKeyOtpMatchEntries": "Girdilerde eşleşen tek seferlik kodları göster",
-  "setDevicesYubiKeyChalRespTitle": "Karşılama Yanıtı",
-  "setDevicesYubiKeyChalRespDesc": "Karşılama yanıtı kipinde bir YubiKey kullanmak da mümkündür, böylece dosyaları şifrelemek için kullanılan özel anahtar parçası YubiKey'de bulunur.",
-  "setDevicesYubiKeyChalRespShow": "Dosyaları açarken YubiKey kullanım seçeneğini göster",
-  "setDevicesYubiKeyStuckWorkaround": "Yükleme sırasında açılmıyor gibi görünüyorsa YubiKey'i yeniden bağlayın",
-  "setDevicesYubiKeyRememberChalResp": "Uygulama açıkken karşılama yanıtını hatırlayın",
-  "yubiKeyStuckError": "YubiKey takılmış gibi görünüyor, otomatik onarım uygulama ayarlarında etkinleştirilebilir.",
-  "yubiKeyNoKeyHeader": "YubiKey gerekli",
-  "yubiKeyNoKeyBody": "Lütfen YubiKey'nizi {} seri numarasıyla ekleyin",
-  "yubiKeySlot": "yuva",
-  "yubiKeyTouchRequestedHeader": "YubiKey'e dokunun",
-  "yubiKeyTouchRequestedBody": "Lütfen YubiKey'nize {} seri numarası ile dokunun",
   "months": [
     "Ocak",
     "Şubat",
@@ -121,8 +71,10 @@
   "ctrlKey": "ctrl",
   "shiftKey": "shift",
   "altKey": "alt",
+  "error": "hata",
   "cache": "Önbellek",
   "file": "Dosya",
+  "device": "cihaz",
   "webdav": "WebDAV",
   "dropbox": "Dropbox",
   "gdrive": "Google Drive",
@@ -132,6 +84,7 @@
   "menuTrash": "Çöp",
   "menuSetGeneral": "Genel",
   "menuSetAbout": "Hakkında",
+  "menuSetDevices": "Cihazlar",
   "menuAlertNoTags": "Etiket yok",
   "menuAlertNoTagsBody": "Alanları düzenlerken, etiketler bölümünde yeni etiketler ekleyebilirsiniz.",
   "menuEmptyTrash": "Çöpü Boşalt",
@@ -281,6 +234,11 @@
   "openListErrorBody": "Dosya listesi yüklenirken bir hata yaşandı",
   "openShowAllFiles": "Tüm dosyaları göster",
   "openFileNoCacheError": "Önbellek deposunda dosya bulunamadı. Bu olabilir, çünkü tarayıcı depolama alanı temizlendi. Dosyayı açmak için, KeeWeb'den kaldırın ve tekrar ekleyin.",
+  "openChalRespHeader": "Karşılama Yanıtı",
+  "openChalRespLoading": "YubiKeys listesi yükleniyor",
+  "openChalRespSelectYubiKey": "Kullanmak istediğiniz bir YubiKey seçin",
+  "openChalRespErrorEmpty": "YubiKey bulunamadı.",
+  "openChalRespErrorEmptyMac": "MacOS'ta bu özelliği ilk kez mi kullanıyorsunuz? Güvenlik ayarlarının Giriş İzleme bölümüne KeeWeb eklenmelidir.",
   "detAttDownload": "Eki indirmek için Shift tuşuna basarak tıklayın veya",
   "detAttDelToRemove": "Kaldırmak için sil",
   "detAttSave": "Farklı kaydet",
@@ -325,7 +283,7 @@
   "detDelToTrashBody": "Giriş çöp klasörüne taşınır.",
   "detFieldCopied": "Kopyalandı",
   "detFieldCopiedTime": "{} saniyede kopyalandı",
-  "detCopyHint": "Alan değerini alan başlığına tıklayarak kopyalabilirsiniz",
+  "detCopyHint": "Alan değerini başlığına tıklayarak kopyalayabilirsiniz",
   "detMore": "daha fazla",
   "detClickToAddField": "yeni bir alan eklemek için tıklayın",
   "detMenuAddNewField": "Yeni alan ekle",
@@ -334,7 +292,8 @@
   "detMenuAddField": "Ekle {}",
   "detMenuCopyPassword": "Parolayı kopyala",
   "detMenuCopyUser": "Kullanıcı adını kopyala",
-  "detSetupOtp": "Tek kullanımlık parolalar",
+  "detMenuCopyOtp": "Tek seferlik kodu kopyala",
+  "detSetupOtp": "Tek kullanımlık kodlar",
   "detClone": "Kopyasını oluştur",
   "detCopyEntryToClipboard": "Tüm alanları kopyala",
   "detClonedName": "Kopyala",
@@ -363,7 +322,11 @@
   "detOtpQrError": "QR kod tarama hatası",
   "detOtpQrErrorBody": "Üzgünüz, QR kodu okuyamadık, lütfen bir kez daha deneyin ya da hata detayları ile birlikte uygulama yöneticisiyle iletişime geçin.",
   "detOtpQrWrong": "Yanlış QR kodu",
-  "detOtpQrWrongBody": "Qr kodunuz başarıyla tarandı ama tek seferlik parola bilgisi içermiyor.",
+  "detOtpQrWrongBody": "Qr kodunuz başarıyla tarandı ama tek seferlik kod bilgisi içermiyor.",
+  "detOtpField": "Tek seferlik kod",
+  "detOtpClickToTouch": "Üretmek için tıkla",
+  "detOtpGenerating": "Üretiliyor...",
+  "detOtpTouch": "Dokunun {}",
   "detLockField": "Bu alanı kilitle, böylece içerik aranamaz ve görünmez. İçeriğin görüntülenmesi tıklamanız gerekir.",
   "detUnlockField": "Bu alanın kilidini açarak içeriğini hemen aranabilir ve görünür hale getirin",
   "detRevealField": "Göster",
@@ -385,7 +348,7 @@
   "autoTypeSelectionHintAction": "Sadece parolanızı yazın",
   "autoTypeSelectionHintOpt": "Sadece kullanıcı adınızı yazın",
   "autoTypeSelectionHintShift": "Diğer alanlar",
-  "autoTypeSelectionOtp": "Tek kullanımlık parola",
+  "autoTypeSelectionOtp": "Tek kullanımlık kod",
   "appSecWarn": "Güvenli Değil!",
   "appSecWarnBody1": "Uygulamayı güvensiz bir bağlantı ile yüklediniz. Birileri sizi izliyor ve şifrenizi çalmaya çalışıyor olabilir. Eğer tam olarak ne yapacağını anlamadıysanız, uygulamayı durdurmanızı önemle tavsiye ediyoruz.",
   "appSecWarnBody2": "Evet, veritabanı şifrelenmiş durumda, ancak hiç kimse size uygulamanın değiştirilmediğini garanti edemez.",
@@ -492,6 +455,7 @@
   "setGenTryBetaWarningBody": "Lütfen tüm dosyaları kaydedin ve düğmeye tekrar tıklayın",
   "setGenShowAppLogs": "Uygulama günlüklerini göster",
   "setGenReloadApp": "Uygulamayı yeniden yükle",
+  "setGenFieldLabelDblClickAutoType": "Alan etiketlerine çift tıklayınca otomatik yaz",
   "setFilePath": "Dosya yolu",
   "setFileStorage": "Bu dosya {} den yüklenmiştir.",
   "setFileIntl": "Bu dosya dahili uygulama deposunda saklanır",
@@ -561,6 +525,16 @@
   "setFileCloseNoSave": "Kapat ve değişiklikleri kaydetme",
   "setFileDontClose": "Kapatma",
   "setFileFormatVersion": "Dosya biçimi",
+  "setFileExportRaw": "Parolalar dışa aktarılıyor",
+  "setFileExportRawBody": "Dışa aktarılan dosya parolalarınızı içerecek, orada şifrelenmeyecek. Devam etmek ister misiniz?",
+  "setFileDeviceIntro": "Bu {} adresinden tek seferlik kodlar uygulamada görüntülenecektir.",
+  "setFileDeviceSettings": "Ayarlar",
+  "setFileYubiKey": "YubiKey",
+  "setFileDontUseYubiKey": "YubiKey kullanma",
+  "setFileRefreshYubiKeyList": "Listeyi yenile",
+  "setFileYubiKeyHeader": "YubiKey",
+  "setFileYubiKeyBody": "Ana anahtarın bir parçası olarak YubiKey kullanmak tehlikelidir ve bir şeyler ters giderse parolalarına erişiminizi kaybedebilirsiniz. Bu ayarı değiştirmeden önce dosyanızı yedeklediniz mi?",
+  "setFileYubiKeyErrorEmptyMac": "Takılı bir YubiKey var gibi görünüyor, ancak görünmüyor. YubiKeys'e erişmek için güvenlik ayarlarının Giriş İzleme bölümüne KeeWeb eklenmelidir.",
   "setShTitle": "Kısayollar",
   "setShShowAll": "tüm ögeleri göster",
   "setShColors": "tüm ögeleri renkli göster",
@@ -616,6 +590,26 @@
   "setPlTranslateLink": "uygulamayı kendi diline çevir",
   "setPlAutoUpdate": "Otomatik olarak güncelle",
   "setPlLoadGallery": "Eklenti galerisini yükle",
+  "setDevicesTitle": "Cihazlar",
+  "setDevicesEnableUsb": "USB cihazlarıyla etkileşimi etkinleştir",
+  "setDevicesYubiKeyIntro": "YubiKey kullanmadan önce {} okumanız önerilir.",
+  "setDevicesYubiKeyIntroLink": "bu belge",
+  "setDevicesYubiKeyToolsDesc": "Bu kipte YubiKey kullanabilmek için {} adlı bir araç kurmanız gerekir.",
+  "setDevicesYubiKeyToolsDesc2": "{} bu araç hakkında daha fazla bilgi almak için.",
+  "setDevicesYubiKeyToolsDescLink": "Buraya tıkla",
+  "setDevicesYubiKeyToolsStatusChecking": "{} kurulu olup olmadığını kontrol et",
+  "setDevicesYubiKeyToolsStatusOk": "{} kuruldu",
+  "setDevicesYubiKeyToolsStatusError": "{} kurulu değil veya çalışmıyor",
+  "setDevicesYubiKeyOtpTitle": "Tek seferlik kodlar",
+  "setDevicesYubiKeyOtpDesc": "YubiKey, farklı hizmetler için tek seferlik kodlar oluşturmak için kullanılabilir.",
+  "setDevicesYubiKeyOtpShowIcon": "Başlangıç ​​ekranında simgeyi göster",
+  "setDevicesYubiKeyOtpAutoOpen": "Açık dosyalar olduğunda tek seferlik kodları otomatik olarak yükle",
+  "setDevicesYubiKeyOtpMatchEntries": "Girdilerde eşleşen tek seferlik kodları göster",
+  "setDevicesYubiKeyChalRespTitle": "Karşılama Yanıtı",
+  "setDevicesYubiKeyChalRespDesc": "Karşılama yanıtı kipinde bir YubiKey kullanmak da mümkündür, böylece dosyaları şifrelemek için kullanılan özel anahtar parçası YubiKey'de bulunur.",
+  "setDevicesYubiKeyChalRespShow": "Dosyaları açarken YubiKey kullanım seçeneğini göster",
+  "setDevicesYubiKeyStuckWorkaround": "Yükleme sırasında açılmıyor gibi görünüyorsa YubiKey'i yeniden bağlayın",
+  "setDevicesYubiKeyRememberChalResp": "Uygulama açıkken karşılama yanıtını hatırlayın",
   "setAboutTitle": "Hakkında",
   "setAboutBuilt": "Bu uygulama, bu müthiş araçlar ile oluşturuldu",
   "setAboutLic": "Lisans",
@@ -629,7 +623,7 @@
   "setHelpProblems1": "Bir şeyler ters giderse, lütfen {}",
   "setHelpProblems2": "yada {}",
   "setHelpOpenIssue": "GitHub’da bir sorun aç",
-  "setHelpContactLink": "geliştirici ile doğrudan iletişime geç",
+  "setHelpContactLink": "geliştirici ile doğrudan iletişime geçin",
   "setHelpAppInfo": "Uygulama bilgisi",
   "setHelpOtherPlatforms": "Diğer ortamlar",
   "setHelpDesktopApps": "Masaüstü uygulaması",
@@ -667,5 +661,13 @@
   "importCsvRun": "İçeri Aktar",
   "importIgnoreField": "Yoksay",
   "importTo": "Girişler içe aktarılacaktır",
-  "importNewFile": "Yeni dosya"
+  "importNewFile": "Yeni dosya",
+  "yubiKeyStuckError": "YubiKey takılmış gibi görünüyor, otomatik onarım uygulama ayarlarında etkinleştirilebilir.",
+  "yubiKeyNoKeyHeader": "YubiKey gerekli",
+  "yubiKeyNoKeyBody": "Lütfen YubiKey'nizi {} seri numarasıyla ekleyin",
+  "yubiKeySlot": "yuva",
+  "yubiKeyTouchRequestedHeader": "YubiKey'e dokunun",
+  "yubiKeyTouchRequestedBody": "Lütfen YubiKey'nize {} seri numarası ile dokunun",
+  "yubiKeyDisabledErrorHeader": "USB devre dışı",
+  "yubiKeyDisabledErrorBody": "Bu dosyayı açmak için YubiKey gereklidir, lütfen ayarlardan USB cihazlarını etkinleştirin."
 }
