--- a/docs/translations/fr-FR/fr-FR.json
+++ b/docs/translations/fr-FR/fr-FR.json
@@ -1,54 +1,4 @@
 {
-  "error": "erreur",
-  "device": "appareil",
-  "menuSetDevices": "Appareils",
-  "openChalRespHeader": "Challenge-Réponse",
-  "openChalRespLoading": "Chargement de la liste des YubiKeys",
-  "openChalRespSelectYubiKey": "Sélectionnez une YubiKey que vous voudriez utiliser",
-  "openChalRespErrorEmpty": "Pas de clé YubiKey trouvée.",
-  "openChalRespErrorEmptyMac": "Première fois que vous utilisez cette fonctionnalité sur MacOS ? KeeWeb doit avoir été autorisé dans la section \"Surveillance de l’entrée\" des paramètres de sécurité.",
-  "detMenuCopyOtp": "Copier le code à usage unique",
-  "detOtpField": "Code à usage unique",
-  "detOtpClickToTouch": "Cliquer pour générer",
-  "detOtpGenerating": "Création...",
-  "detOtpTouch": "Touchez votre {}",
-  "setGenFieldLabelDblClickAutoType": "Remplissage auto par double clic sur les noms de champ",
-  "setFileExportRaw": "Exporter vos mots de passe",
-  "setFileDeviceIntro": "Les codes à usage unique de cette {} vont être affichés dans l'application.",
-  "setFileExportRawBody": "Le fichier exporté contiendra vos mots de passe, il n'y seront plus cryptés. Voulez vous continuer ?",
-  "setFileDeviceSettings": "Paramètres",
-  "setFileYubiKey": "YubiKey",
-  "setFileDontUseYubiKey": "Ne pas utiliser une YubiKey",
-  "setFileYubiKeyHeader": "YubiKey",
-  "setFileRefreshYubiKeyList": "Rafraichir la liste",
-  "setFileYubiKeyBody": "Utiliser une YubiKey comme partie de la clé maitre est dangeureux, et vous risquez de perdre l'accès à vos mots de passe si quelque chose tourne mal. Avez vous réalisé une sauvegarde de votre fichier avant de modifier les paramètres ?",
-  "setFileYubiKeyErrorEmptyMac": "Il semble qu'il y a une YubiKey connectée, mais elle est invisible. KeeWeb doit avoir été autorisé dans la section \"Surveillance de l’entrée\" des paramètres de sécurité pour se connecter à la YubiKey.",
-  "setDevicesTitle": "Appareils",
-  "setDevicesEnableUsb": "Autoriser les interactions avec les appareils USB",
-  "setDevicesYubiKeyIntro": "Il est recommandé de lire {} avant d'utiliser une YubiKey.",
-  "setDevicesYubiKeyIntroLink": "ce document",
-  "setDevicesYubiKeyToolsDesc": "Pour permettre l'utilisation de YubiKey dans ce mode, vous devez installer un outil appelé {}.",
-  "setDevicesYubiKeyToolsDesc2": "{} pour avoir plus d'information sur cet outil.",
-  "setDevicesYubiKeyToolsDescLink": "Cliquez ici",
-  "setDevicesYubiKeyToolsStatusChecking": "Vérification si {} est installé",
-  "setDevicesYubiKeyToolsStatusOk": "{} est installé",
-  "setDevicesYubiKeyToolsStatusError": "{} n'est pas installé, ou ne fonctionne pas",
-  "setDevicesYubiKeyOtpTitle": "Codes à usage unique",
-  "setDevicesYubiKeyOtpDesc": "YubiKey peut être utilisé pour générer des codes à usage unique pour différents services.",
-  "setDevicesYubiKeyOtpShowIcon": "Afficher l'icône sur l'écran de démarrage",
-  "setDevicesYubiKeyOtpAutoOpen": "Charger automatiquement les codes à usage unique lorsqu'il y a des fichiers ouverts",
-  "setDevicesYubiKeyOtpMatchEntries": "Afficher les codes à usage unique qui correspondent dans les entrées",
-  "setDevicesYubiKeyChalRespTitle": "Challenge-Réponse",
-  "setDevicesYubiKeyChalRespDesc": "Il est aussi possible d'utiliser une YubiKey en mode Challenge-Réponse, afin qu'une partie de la clé privée utilisée pour crypter les fichiers provienne d'une YubiKey.",
-  "setDevicesYubiKeyChalRespShow": "Proposer l'option d'utiliser une YubiKey à l'ouverture des fichiers",
-  "setDevicesYubiKeyStuckWorkaround": "Reconnecter la YubiKey si elle semble bloquée au moment du chargement",
-  "setDevicesYubiKeyRememberChalResp": "Se souvenir du challenge-réponse le temps que l'application reste ouverte",
-  "yubiKeyStuckError": "La YubiKey semble coincée, la réparation automatique est activable dans les paramètres de l'application.",
-  "yubiKeyNoKeyHeader": "Une YubiKey est requise",
-  "yubiKeyNoKeyBody": "Merci d'insérer votre YubiKey avec le numéro de série {}",
-  "yubiKeySlot": "port",
-  "yubiKeyTouchRequestedHeader": "Touchez votre YubiKey",
-  "yubiKeyTouchRequestedBody": "Merci de toucher votre YubiKey avec le numéro de série {}",
   "months": [
     "Janvier",
     "Février",
@@ -121,8 +71,10 @@
   "ctrlKey": "ctrl",
   "shiftKey": "shift",
   "altKey": "alt",
+  "error": "erreur",
   "cache": "cache",
   "file": "fichier",
+  "device": "appareil",
   "webdav": "WebDAV",
   "dropbox": "Dropbox",
   "gdrive": "Google Drive",
@@ -132,6 +84,7 @@
   "menuTrash": "Corbeille",
   "menuSetGeneral": "Général",
   "menuSetAbout": "À propos",
+  "menuSetDevices": "Appareils",
   "menuAlertNoTags": "Aucun tag",
   "menuAlertNoTagsBody": "Vous pouvez ajouter de nouveaux tags en éditant les champs, dans la section Tags.",
   "menuEmptyTrash": "Vider la Corbeille",
@@ -281,6 +234,11 @@
   "openListErrorBody": "Erreur au chargement de la liste des fichiers",
   "openShowAllFiles": "Tous les fichiers",
   "openFileNoCacheError": "Fichier non trouvé dans la mémoire cache. Cela peut arriver parce que le stockage du navigateur a été nettoyé. Pour ouvrir le fichier, supprimez-le de KeeWeb et ajoutez-le à nouveau.",
+  "openChalRespHeader": "Challenge-Réponse",
+  "openChalRespLoading": "Chargement de la liste des YubiKeys",
+  "openChalRespSelectYubiKey": "Sélectionnez une YubiKey que vous voudriez utiliser",
+  "openChalRespErrorEmpty": "Pas de clé YubiKey trouvée.",
+  "openChalRespErrorEmptyMac": "Première fois que vous utilisez cette fonctionnalité sur MacOS ? KeeWeb doit avoir été autorisé dans la section \"Surveillance de l’entrée\" des paramètres de sécurité.",
   "detAttDownload": "Cliquez sur le bouton de pièce-jointe en pressant la touche Maj pour le télécharger ou",
   "detAttDelToRemove": "Supprimer pour enlever",
   "detAttSave": "Enregistrer sous",
@@ -334,6 +292,7 @@
   "detMenuAddField": "Ajouter {}",
   "detMenuCopyPassword": "Copier mot de passe",
   "detMenuCopyUser": "Copier nom",
+  "detMenuCopyOtp": "Copier le code à usage unique",
   "detSetupOtp": "Codes à usage unique",
   "detClone": "Dupliquer",
   "detCopyEntryToClipboard": "Copier tous les champs",
@@ -364,6 +323,10 @@
   "detOtpQrErrorBody": "Désolé, le QR code n'a pas pu être lu, essayez à nouveau ou contacter les auteurs de l'application avec le détail de l'erreur.",
   "detOtpQrWrong": "QR code incorrect",
   "detOtpQrWrongBody": "Votre QR code a été scanné avec succès mais il ne contient pas d'information pour un mot de passe à usage unique.",
+  "detOtpField": "Code à usage unique",
+  "detOtpClickToTouch": "Cliquer pour générer",
+  "detOtpGenerating": "Création...",
+  "detOtpTouch": "Touchez votre {}",
   "detLockField": "Verrouiller ce champ, ainsi son contenu ne sera pas visible ni ne pourra être cherché. Visualiser son contenu exigera de le cliquer explicitement.",
   "detUnlockField": "Déverrouiller ce champ, rendant son contenu immédiatement visible et pouvant être cherché",
   "detRevealField": "Révéler",
@@ -492,6 +455,7 @@
   "setGenTryBetaWarningBody": "Sauvegarder tous les fichiers et re-cliquer ce bouton",
   "setGenShowAppLogs": "Voir les logs",
   "setGenReloadApp": "Recharger l'application",
+  "setGenFieldLabelDblClickAutoType": "Remplissage auto par double clic sur les noms de champ",
   "setFilePath": "Chemin",
   "setFileStorage": "Le fichier est ouvert de {}.",
   "setFileIntl": "Le fichier est conservé dans le stockage interne de l'application",
@@ -561,6 +525,16 @@
   "setFileCloseNoSave": "Fermer et perdre les modifs",
   "setFileDontClose": "Ne pas fermer",
   "setFileFormatVersion": "Format de fichier",
+  "setFileExportRaw": "Exporter vos mots de passe",
+  "setFileExportRawBody": "Le fichier exporté contiendra vos mots de passe, il n'y seront plus cryptés. Voulez vous continuer ?",
+  "setFileDeviceIntro": "Les codes à usage unique de cette {} vont être affichés dans l'application.",
+  "setFileDeviceSettings": "Paramètres",
+  "setFileYubiKey": "YubiKey",
+  "setFileDontUseYubiKey": "Ne pas utiliser une YubiKey",
+  "setFileRefreshYubiKeyList": "Rafraichir la liste",
+  "setFileYubiKeyHeader": "YubiKey",
+  "setFileYubiKeyBody": "Utiliser une YubiKey comme partie de la clé maitre est dangeureux, et vous risquez de perdre l'accès à vos mots de passe si quelque chose tourne mal. Avez vous réalisé une sauvegarde de votre fichier avant de modifier les paramètres ?",
+  "setFileYubiKeyErrorEmptyMac": "Il semble qu'il y a une YubiKey connectée, mais elle est invisible. KeeWeb doit avoir été autorisé dans la section \"Surveillance de l’entrée\" des paramètres de sécurité pour se connecter à la YubiKey.",
   "setShTitle": "Raccourcis",
   "setShShowAll": "montrer tout",
   "setShColors": "montrer les champs en couleur",
@@ -616,6 +590,26 @@
   "setPlTranslateLink": "traduire l'appli dans votre langue",
   "setPlAutoUpdate": "Mise à jour automatique",
   "setPlLoadGallery": "Charger le catalogue",
+  "setDevicesTitle": "Appareils",
+  "setDevicesEnableUsb": "Autoriser les interactions avec les appareils USB",
+  "setDevicesYubiKeyIntro": "Il est recommandé de lire {} avant d'utiliser une YubiKey.",
+  "setDevicesYubiKeyIntroLink": "ce document",
+  "setDevicesYubiKeyToolsDesc": "Pour permettre l'utilisation de YubiKey dans ce mode, vous devez installer un outil appelé {}.",
+  "setDevicesYubiKeyToolsDesc2": "{} pour avoir plus d'information sur cet outil.",
+  "setDevicesYubiKeyToolsDescLink": "Cliquez ici",
+  "setDevicesYubiKeyToolsStatusChecking": "Vérification si {} est installé",
+  "setDevicesYubiKeyToolsStatusOk": "{} est installé",
+  "setDevicesYubiKeyToolsStatusError": "{} n'est pas installé, ou ne fonctionne pas",
+  "setDevicesYubiKeyOtpTitle": "Codes à usage unique",
+  "setDevicesYubiKeyOtpDesc": "YubiKey peut être utilisé pour générer des codes à usage unique pour différents services.",
+  "setDevicesYubiKeyOtpShowIcon": "Afficher l'icône sur l'écran de démarrage",
+  "setDevicesYubiKeyOtpAutoOpen": "Charger automatiquement les codes à usage unique lorsqu'il y a des fichiers ouverts",
+  "setDevicesYubiKeyOtpMatchEntries": "Afficher les codes à usage unique qui correspondent dans les entrées",
+  "setDevicesYubiKeyChalRespTitle": "Challenge-Réponse",
+  "setDevicesYubiKeyChalRespDesc": "Il est aussi possible d'utiliser une YubiKey en mode Challenge-Réponse, afin qu'une partie de la clé privée utilisée pour crypter les fichiers provienne d'une YubiKey.",
+  "setDevicesYubiKeyChalRespShow": "Proposer l'option d'utiliser une YubiKey à l'ouverture des fichiers",
+  "setDevicesYubiKeyStuckWorkaround": "Reconnecter la YubiKey si elle semble bloquée au moment du chargement",
+  "setDevicesYubiKeyRememberChalResp": "Se souvenir du challenge-réponse le temps que l'application reste ouverte",
   "setAboutTitle": "À propos",
   "setAboutBuilt": "Cette appli est construite avec ces outils géniaux",
   "setAboutLic": "Licence",
@@ -667,5 +661,11 @@
   "importCsvRun": "Importer",
   "importIgnoreField": "Ignorer",
   "importTo": "Les entrées seront importées dans",
-  "importNewFile": "Nouveau fichier"
+  "importNewFile": "Nouveau fichier",
+  "yubiKeyStuckError": "La YubiKey semble coincée, la réparation automatique est activable dans les paramètres de l'application.",
+  "yubiKeyNoKeyHeader": "Une YubiKey est requise",
+  "yubiKeyNoKeyBody": "Merci d'insérer votre YubiKey avec le numéro de série {}",
+  "yubiKeySlot": "port",
+  "yubiKeyTouchRequestedHeader": "Touchez votre YubiKey",
+  "yubiKeyTouchRequestedBody": "Merci de toucher votre YubiKey avec le numéro de série {}"
 }
